<resources>
    <string name="appName">GT Financial Aid</string>
    <string name="actionSettings">Settings</string>

    <string name="titleHome">Home</string>
    <string name="titleLogin">Login</string>
    <string name="titleRegister">Register</string>

    <string name="addCost">Add Cost</string>
    <string name="addAid">Add Aid</string>
    <string name="calculate">Calculate</string>
    <string name="addDate">Add Deadline</string>

    <string name="labelDeadline">Upcoming Deadlines:</string>
    <string name="labelSummary">Summary</string>

    <string name="placeholder">Placeholder</string>

    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="loginPasswordConfirmation">Confirm Password</string>
    <string name="loginLogin">Login</string>
    <string name="loginRegister">Register</string>

    <string name="aidLabel">Aid</string>
    <string name="addButton">Add</string>
    <string name="editButton">Edit</string>
    <string name="removeButton">Remove</string>

    <string name="costLabel">Cost</string>

    <string name="nameLabel">Name: </string>
    <string name="amountLabel">Amount: </string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="remove">Remove</string>
    <string name="confirm">Confirm</string>

    <string name="error">Error</string>
    <string name="nameError">Please complete every field</string>

    <string name="noAid">You have no aid.</string>
    <string name="noCost">You have no costs.</string>

    <string name="costTemplate">The cost is $%.2f.</string>
</resources>
